# Typer-Package

./: README.md
stockpackage/: README.md  pyproject.toml
stockpackage/stockpackage/: main.py
stockpackage/tests/: test_stockpackage.py
