[tool.poetry]
name = "stockpackage"
version = "0.1.0"
description = ""
authors = ["markus <datamastery87@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
stockpackage = "stockpackage.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
